# Goofy

./: CMakeLists.txt
.github/workflows/: android.yml  android_macos.yml  android_ubuntu.yml  cmake-multi-platform.yml
GoofyTC/: goofy_tc.h
Src/: CMakeLists.txt  main.cpp
